[tool.poetry]
name = "secure-storage-tools"
version = "0.1.0"
description = "A simple utility for interacting with cryptsetup/rsync/etc.. on a linux filesystem. Use cases include opening/closing encrypted disks as well as backing up encrypted data"
authors = ["Eric Crowley <eecmtf@gmail.com>"]
readme = "README.md"
packages = [{include = "secure_storage_tools"}]

[tool.poetry.dependencies]
python = "^3.11"
pendulum = "^2.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "*"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
